--- a/platformio.ini
+++ b/platformio.ini
@@ -20,12 +20,14 @@ upload_speed = 921600
 
 ; Build options
 build_flags =
-  -D VERSION="1.2.3"
-  -D MCPOC_TEST=1
+  -D VMC_VERSION=1.02
+;-D MCPOC_TEST=1
 ;-D BMP085_ENABLE_DIAG=1
 ;-D OPTIMIZE_SRAM_SIZE=1
 
 lib_deps =
+  D:\elec\projet\MyLib\
   Sodaq_BMP085
   MQTT
   DHT
+  NtpClientLib
