--- a/platformio.ini
+++ b/platformio.ini
@@ -16,12 +16,14 @@ env_default = nodemcuv2
 platform = espressif8266
 board = nodemcuv2
 framework = arduino
-upload_speed = 921600
+;upload_speed = 921600
 
 ; Build options
 build_flags =
-  -D VMC_VERSION=1.02
-  -D MCPOC_TEST=1
+  -D MODULE_VERSION=2.05
+;-D MCPOC_TEST=1
+;-D MCPOC_MOCK=1
+;-D MCPOC_TELNET=1
 ;-D BMP085_ENABLE_DIAG=1
 ;-D OPTIMIZE_SRAM_SIZE=1
 
@@ -29,6 +31,8 @@ lib_deps =
   ..\MyLib\
   Sodaq_BMP085
   Time
-  MQTT
+  Adafruit MQTT Library
   DHT
   NtpClientLib
+  RTC
+  RemoteDebug
