encore des updates

--- a/platformio.ini
+++ b/platformio.ini
@@ -20,10 +20,10 @@ framework = arduino
 
 ; Build options
 build_flags =
-  -D MODULE_VERSION=2.05
-;-D MCPOC_TEST=1
-;-D MCPOC_MOCK=1
-;-D MCPOC_TELNET=1
+  -D MODULE_VERSION=2.15
+  -D MCPOC_TEST=1
+  -D MCPOC_MOCK=1
+;  -D MCPOC_TELNET=1
 ;-D BMP085_ENABLE_DIAG=1
 ;-D OPTIMIZE_SRAM_SIZE=1
 
