improve Wifi security

--- a/platformio.ini
+++ b/platformio.ini
@@ -20,7 +20,7 @@ framework = arduino
 
 ; Build options
 build_flags =
-  -D MODULE_VERSION=3.01
+  -D MODULE_VERSION=3.08
   -D EEPROM_VERSION=1
 ;-D MCPOC_TEST=1
 ; -D MCPOC_MOCK=1
@@ -32,7 +32,8 @@ lib_deps =
   ..\MyLib\
   Sodaq_BMP085
   Time
-  Adafruit MQTT Library
+;Adafruit MQTT Library
+  ThingSpeak
   DHT
   NtpClientLib
   RTC
