--- a/platformio.ini
+++ b/platformio.ini
@@ -16,15 +16,17 @@ env_default = nodemcuv2
 platform = espressif8266
 board = nodemcuv2
 framework = arduino
-;upload_speed = 921600
+;upload_speed = 921600vf
 
 ; Build options
 build_flags =
-  -D MODULE_VERSION=3.08
+  -D MODULE_VERSION=3.18
   -D EEPROM_VERSION=1
-;-D MCPOC_TEST=1
+; -D MCPOC_TEST=1
+;-D DEBUG_ESP_WIFI=1
+;-D DEBUG_ESP_PORT=Serial
 ; -D MCPOC_MOCK=1
-;  -D MCPOC_TELNET=1
+;-D MCPOC_TELNET=1
 ;-D BMP085_ENABLE_DIAG=1
 ;-D OPTIMIZE_SRAM_SIZE=1
 
@@ -38,3 +40,4 @@ lib_deps =
   NtpClientLib
   RTC
   RemoteDebug
+  ESP8266HTTPClient
