--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,36 @@
+# Prerequisites
+*.d
+
+# Compiled Object files
+*.slo
+*.lo
+*.o
+*.obj
+
+# Precompiled Headers
+*.gch
+*.pch
+
+# Compiled Dynamic libraries
+*.so
+*.dylib
+*.dll
+
+# Fortran module files
+*.mod
+*.smod
+
+# Compiled Static libraries
+*.lai
+*.la
+*.a
+*.lib
+
+# Executables
+*.exe
+*.out
+*.app
+.pio
 .pioenvs
 .piolibdeps
 .clang_complete
@@ -5,3 +38,14 @@
 .vscode/.browse.c_cpp.db*
 .vscode/c_cpp_properties.json
 .vscode/launch.json
+.clang_complete
+.gcc-flags.json
+.pioenvs/do-not-modify-files-here.url
+.pioenvs/nodemcuv2/firmware.elf
+.pioenvs/structure.hash
+.vscode/extensions.json
+.clang_complete
+.gcc-flags.json
+.pioenvs/do-not-modify-files-here.url
+.pioenvs/nodemcuv2/firmware.elf
+.pioenvs/structure.hash
