--- a/platformio.ini
+++ b/platformio.ini
@@ -17,15 +17,18 @@ platform = espressif8266
 board = nodemcuv2
 framework = arduino
 ;upload_speed = 921600vf
-
+monitor_speed = 115200
+monitor_flags = 
+;  --filter=esp32_exception_decoder
+ --filter=esp8266_exception_decoder
 ; Build options
 build_flags =
-  -D MODULE_VERSION=3.18
+  -D MODULE_VERSION=3.2
   -D EEPROM_VERSION=1
-; -D MCPOC_TEST=1
+;-D MCPOC_TEST=1
 ;-D DEBUG_ESP_WIFI=1
 ;-D DEBUG_ESP_PORT=Serial
-; -D MCPOC_MOCK=1
+;-D MCPOC_MOCK=1
 ;-D MCPOC_TELNET=1
 ;-D BMP085_ENABLE_DIAG=1
 ;-D OPTIMIZE_SRAM_SIZE=1
@@ -37,7 +40,7 @@ lib_deps =
 ;Adafruit MQTT Library
   ThingSpeak
   DHT
-  NtpClientLib
+  NtpClientLib@2.5.0
   RTC
   RemoteDebug
   ESP8266HTTPClient
